JSAPI-3681: Nowrap counter (iOS issue)

--- a/styles/style.less
+++ b/styles/style.less
@@ -646,6 +646,7 @@
     width: 370px;
     }
     .lightness-panel__counter {
+        white-space: nowrap;
         margin-left: 245px;
         font: normal 28px/26px 'SuisseIntlCond', Arial, sans-serif;
         }
